# ai-app-starter-swiftui-fastapi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  progress.md
.github/: PULL_REQUEST_TEMPLATE.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users.py
backend/app/: main.py
backend/app/api/routes/: auth.py  health.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/dependencies/: auth.py
backend/app/models/: user.py
backend/app/schemas/: __init__.py  auth.py  user.py
backend/tests/: conftest.py  test_auth_error_contract.py  test_auth_login.py  test_auth_security.py  test_auth_signup.py  test_config.py  test_db_session.py  test_health.py  test_health_isolation.py  test_users_me.py
docs/: README.md  architecture.md  auth-design.md  backend-design.md  ci.md  codex-workflow.md  ios-design.md  ios-testing.md  known-limitations.md  local-development.md  philosophy.md  public-launch-checklist.md  quickstart.md  release-checklist.md  release-readiness.md  roadmap.md  secret-audit.md  testing.md  versioning.md
examples/: README.md  backend-auth-flow.md  codex-feature-implementation.md  codex-review-workflow.md  docker-postgres-local.md  ios-auth-flow.md  release-readiness-flow.md
ios/: README.md
scripts/: check-markdown-links.py  local-verify-backend.sh  local-verify-docker.sh  local-verify-ios.sh  (+4 more)
(+52 files in other folders)
