[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-app-starter-swiftui-fastapi-backend"
version = "0.1.0.dev0"
description = "Minimal FastAPI backend for ai-app-starter-swiftui-fastapi."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0,<2.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "PyJWT>=2.9.0,<3.0.0",
    "pydantic-settings>=2.4.0,<3.0.0",
    "pwdlib[argon2]>=0.2.0,<1.0.0",
    "SQLAlchemy>=2.0.0,<3.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0,<1.0.0",
    "pytest>=8.0.0,<9.0.0",
]
postgres = [
    "psycopg[binary]>=3.2.0,<4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
